@@ -1,3 +1,10 @@
+1998-08-23  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): You can give
+	this macro two parameters: the required version number and
+	an optional `fail' argument to make it fail if LibGTop is
+	not found.
+
 1998-08-22  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-guile-checks.m4: Added check for `-lnsl' and `-lsocket'
